--- a/StoryBoards/Base.lproj/Main.storyboard
+++ b/StoryBoards/Base.lproj/Main.storyboard
@@ -257,11 +257,11 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ym4-j7-byj">
                                             <rect key="frame" x="8" y="8" width="95" height="121.5"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" ambiguous="YES" image="fingerprint" translatesAutoresizingMaskIntoConstraints="NO" id="8mY-Kq-QFF">
-                                                    <rect key="frame" x="39.5" y="0.0" width="16" height="93"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="fingerprint" translatesAutoresizingMaskIntoConstraints="NO" id="8mY-Kq-QFF">
+                                                    <rect key="frame" x="0.0" y="0.0" width="95" height="93"/>
                                                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ptJ-01-cfz">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ptJ-01-cfz">
                                                     <rect key="frame" x="26.5" y="101" width="42" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -544,33 +544,36 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="eHD-jN-sq6" userLabel="Check Stack View">
                                         <rect key="frame" x="120" y="0.0" width="155" height="97"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="RGQ-Ia-s4z" userLabel="Check IN Stack View">
-                                                <rect key="frame" x="0.0" y="0.0" width="139" height="40.5"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="RGQ-Ia-s4z" userLabel="Check IN Stack View">
+                                                <rect key="frame" x="0.0" y="0.0" width="139" height="41"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DU7-fH-pDI" customClass="RadioButton" customModule="MBRadioButton">
-                                                        <rect key="frame" x="0.0" y="0.0" width="30" height="40.5"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DU7-fH-pDI" customClass="RadioButton" customModule="MBRadioButton">
+                                                        <rect key="frame" x="0.0" y="0.0" width="30" height="41"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="30" id="lMp-YN-BFn"/>
+                                                        </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                         <state key="normal">
                                                             <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </state>
                                                     </button>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Check In" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xLj-Wa-VAK">
-                                                        <rect key="frame" x="40" y="0.0" width="99" height="40.5"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Check In" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xLj-Wa-VAK">
+                                                        <rect key="frame" x="40" y="0.0" width="99" height="41"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
                                             </stackView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="4l2-mk-NuT" userLabel="Check Out Stack View">
-                                                <rect key="frame" x="0.0" y="65.5" width="155" height="31.5"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="4l2-mk-NuT" userLabel="Check Out Stack View">
+                                                <rect key="frame" x="0.0" y="66" width="155" height="31"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DgB-JX-ZNR" customClass="RadioButton" customModule="MBRadioButton">
-                                                        <rect key="frame" x="0.0" y="0.0" width="30" height="31.5"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DgB-JX-ZNR" customClass="RadioButton" customModule="MBRadioButton">
+                                                        <rect key="frame" x="0.0" y="0.0" width="30" height="31"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                     </button>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Check out" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AXE-2W-923">
-                                                        <rect key="frame" x="40" y="0.0" width="115" height="31.5"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Check out" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AXE-2W-923">
+                                                        <rect key="frame" x="40" y="0.0" width="115" height="31"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -578,6 +581,11 @@
                                                 </subviews>
                                             </stackView>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="RGQ-Ia-s4z" secondAttribute="trailing" constant="16" id="8kL-Mg-DYV"/>
+                                            <constraint firstItem="4l2-mk-NuT" firstAttribute="top" secondItem="eHD-jN-sq6" secondAttribute="top" constant="66" id="j9Z-sd-fG6"/>
+                                            <constraint firstAttribute="trailing" secondItem="4l2-mk-NuT" secondAttribute="trailing" id="mXy-eg-Qq3"/>
+                                        </constraints>
                                     </stackView>
                                 </subviews>
                             </stackView>
